fix: fixing a border radius varible to add where need and fining a header userBlock alignment

--- a/app/cart/page.module.css
+++ b/app/cart/page.module.css
@@ -31,7 +31,7 @@
   margin-bottom: 24px;
   padding: 24px;
   background-color: var(--color-gray-200);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .sum h3 {
