--- a/components/Counter/Counter.module.css
+++ b/components/Counter/Counter.module.css
@@ -5,7 +5,7 @@
   width: 102px;
   height: 53px;
   background-color: var(--color-gray-200);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .counter button {
