--- a/components/cartItem/CartItem.module.css
+++ b/components/cartItem/CartItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .image {
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .imageWrapper {
