--- a/components/inputField/InputField.module.css
+++ b/components/inputField/InputField.module.css
@@ -14,7 +14,7 @@
   padding: 12px 0px 12px 12px;
   outline: 2px solid var(--color-gray-150);
   border-bottom: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .input::placeholder {
@@ -23,7 +23,7 @@
 
 .input:focus-visible {
   outline: 2px solid var(--color-gray-150);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
 }
 
 .gray {
