--- a/components/searching/Searching.module.css
+++ b/components/searching/Searching.module.css
@@ -1,8 +1,10 @@
 .search {
   display: flex;
   align-items: center;
-  gap: 5px;
-  padding: 10px;
+  gap: 8px;
+  padding-left: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   background-color: var(--color-gray-200);
   border-radius: var(--border-radius);
 }
