--- a/components/selectField/SelectField.module.css
+++ b/components/selectField/SelectField.module.css
@@ -15,6 +15,6 @@
   padding: 15px 12px;
   background-color: transparent;
   border: 1px solid var(--color-gray-150);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   appearance: none;
 }
