--- a/layouts/header/Header.module.css
+++ b/layouts/header/Header.module.css
@@ -25,6 +25,7 @@
 
 .userBlock {
   display: flex;
+  align-items: center;
   gap: 32px;
 }
 
